Fix clipping of long expected value strings

--- a/src/css/page.scss
+++ b/src/css/page.scss
@@ -369,6 +369,7 @@ label {
     .supported-values {
         font-size: 16px;
         opacity: 0.7;
+        overflow-wrap: anywhere;
     }
 }
 
